--- a/passport_authentication/package.json
+++ b/passport_authentication/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
     "passport-local": "^1.0.0",
     "sequelize": "^5.21.8",
     "sqlite3": "^4.2.0"
